[tool.poetry]
name = "Dynamojo"
version = "0.2.2"
description = "ORM For dynamodb"
authors = ["Mathew Moon <me@mathewmoon.net>"]
homepage = "https://github.com/mathewmoon/dynamojo"
repository = "https://github.com/mathewmoon/dynamojo"

readme = "README.md"
packages = [{include = "dynamojo", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.56"
pydantic = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
boto3-stubs = {extras = ["dynamodb"], version = "^1.34.58"}

[tool.pytest.ini_options]
xfail_strict = true

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
